# RustOS

./: Cargo.toml  README.md
.cargo/: config.toml
src/: allocator.rs  fs.rs  gdt.rs  interrupts.rs  keyboard.rs  lib.rs  main.rs  memory.rs  shell.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
tests/: basic_boot.rs  heap_allocation.rs  stack_overflow.rs
