[package]
name = "rustos"
version = "0.1.0"
edition = "2021"
authors = ["Angshuman Sengupta <angshuman@cse.iitb.ac.in>"]

# the profile used for `cargo build`
# [profile.dev]
# panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# isa-debug-exit is a device provided by qemu, this provids easy way to exit
# qemu from the guest system
# we also pass 2 parameters iobase and iosize which specifies the I/O port through
# which we can communicate with the OS via qemu
# 0xf4 is generally unused port in x86 IO bus, and 0x04 is size of port (4 bytes)
[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 30

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false